# Fully-Automated-Polymarket-AI-Trading-Bot

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  config.yaml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
docs/: API_REFERENCE.md  GLOSSARY.md  bugfix_spec.docx  polymarket_analysis_layer_spec_v1.1.docx  polymarket_bot_code_review_v3.docx  polymarket_bot_implementation_spec.docx  polymarket_bot_spec.md  polymarket_classification_bug_spec.docx  polymarket_code_review_v10.docx  polymarket_code_review_v11.docx  polymarket_code_review_v12.docx  polymarket_code_review_v13.docx  polymarket_code_review_v14.docx  polymarket_code_review_v15.docx  polymarket_code_review_v16.docx  polymarket_code_review_v17.docx  polymarket_code_review_v18.docx  polymarket_code_review_v19.docx  polymarket_code_review_v20.docx  polymarket_code_review_v21.docx  polymarket_code_review_v22.docx  polymarket_code_review_v23.docx  polymarket_code_review_v24_kronos.docx  polymarket_code_review_v25.docx  polymarket_code_review_v26.docx  polymarket_code_review_v27.docx  polymarket_code_review_v28.docx  polymarket_code_review_v29.docx  polymarket_code_review_v30.docx  polymarket_code_review_v31.docx  polymarket_code_review_v32.docx  polymarket_code_review_v4.docx  polymarket_code_review_v5.docx  polymarket_code_review_v6.docx  polymarket_code_review_v7.docx  polymarket_code_review_v8.docx  polymarket_code_review_v8_with_doc_audit.docx  polymarket_code_review_v9-2.docx  polymarket_code_review_v9.docx  polymarket_crypto_investigation.docx  (+10 more)
scripts/: seed_demo_data.py
src/: cli.py  config.py
tests/: conftest.py  test_ai_analyst.py  test_analytics.py  test_api_pool.py  test_arb_integration.py  test_backtest_cli.py  test_backtest_dashboard.py  test_backtest_database.py  test_backtest_models.py  test_base_rate_dashboard.py  test_base_rates.py  test_bot_commands.py  test_budget.py  test_chaos_testing.py  test_circuit_breaker.py  test_code_review_v13_remaining.py  test_code_review_v15.py  test_code_review_v16.py  test_code_review_v17.py  test_code_review_v18.py  test_code_review_v19.py  test_code_review_v20.py  test_code_review_v21.py  test_code_review_v22.py  test_code_review_v23.py  test_code_review_v24.py  test_code_review_v25.py  test_code_review_v3.py  test_comparator.py  test_config_validation.py  test_connector_arxiv.py  test_connector_base.py  test_connector_coingecko.py  (+91 more)
(+120 files in other folders)
