[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.2.0"
description = "Polymarket Trading Bot — Autonomous AI prediction market bot with multi-model ensemble forecasting, automated research, whale tracking, and real-time dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "polymarket",
    "trading-bot",
    "prediction-markets",
    "ai-trading",
    "automated-trading",
    "algorithmic-trading",
    "whale-tracking",
    "kelly-criterion",
    "gpt-4",
    "llm",
    "forecasting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "openai>=1.12",
    "anthropic>=0.18",
    "google-generativeai>=0.4",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tenacity>=8.2",
    "websockets>=12.0",
    "flask>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=3.10",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    "aiohttp>=3.9",
    "sentry-sdk[flask]>=1.40",
]

[project.optional-dependencies]
clob = ["py-clob-client>=0.1"]
prod = ["gunicorn>=21.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
bot = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
